--- a/config/database.yml
+++ b/config/database.yml
@@ -13,13 +13,13 @@ default: &default
   adapter: mysql2
   encoding: utf8
   pool: 5
-  username: root
-  password: kunjamma91
+  username: simple_cms
+  password: passed
   host: localhost
 
 development:
   <<: *default
-  database: #simple_cms_development
+  database: simple_cms_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
